# SFW_Extend

./: .classpath  .project  README.md
deepseek/AiAgent/docs/: architecture.html  classes.html  commands.html  index.html  patterns.html
deepseek/AiAgent/docs/css/: style.css
deepseek/AiAgent/docs/js/: main.js
deepseek/AiAgent/sair/aiagent/: AiAgentActivity.java
deepseek/QrCode/sair/qrcode/: QrCodeActivity.java
deepseek/SaComS_LibC/: CMakeLists.txt  MANIFEST.MF  Makefile  build.bat
deepseek/SaComS_LibC/src/main/c/: cmd_exec.c  filemana.c  jni_bridge.c  mathcast.c  randoms.c  sacoms_libc.h  search.c  stredit.c
deepseek/SaComS_LibC/src/main/java/sair/sacoms/jni/: JNISaComS.java
deepseek/jud/sair/jud/: JudMain.java
deepseek/scq/readme/: index.html
deepseek/scq/sair/scq/: SCClientActivity.java  SCServerActivity.java
exec_codes/oldcode/sair/fans/: AutoThread.java  Bilier.java  FansFrame.java  Get.java  MANIFEST.MF  Main.java
exec_codes/oldcode/sair/ire/: IRE.java  JCPMod.java  MANIFEST.MF  SEMod.java  Tools.java  UDFParse.java
exec_codes/oldcode/sair/keyfunc/: ActActionListener.java  ActButton.java  CMDTimePage.java  KeyFuncFrame.java  KeyFuncMain.java  MANIFEST.MF
exec_codes/oldcode/sair/nsc/: AutoPrintln.java  C.java  CM.java  Lib.java  MANIFEST.MF  MOD.java  S.java  SM.java  SingleServer.java  Tool.java
exec_codes/oldcode/sair/pic/: MANIFEST.MF  MainClass.java  MainFrame.java
exec_codes/reconstitution/musicplayer/readme/: index.html
exec_codes/中文封装代码/夏希尔/夏希尔框架代理/: 活动.java  (+1 more)
exec_codes/层压组胚计算器/层压组胚计算器/: 主窗口.java  活动主入口.java  自定义按钮.java  计算.java
(+217 files in other folders)
